--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="produtos" id="produtos">
 
         </div>
+        <button class="button2" id="adicionar"><img src="./img/adicionar produto.png" alt=""></button>
     </main>
 </body>
 </html>
