--- a/pages/adicionar.html
+++ b/pages/adicionar.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../js/editar.js" type="module"></script>
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <script src="../js/adicionar.js" defer type="module"></script>
+    <title>Api Produtos</title>
 </head>
 <body>
     <input class="input" type="text" id="nome">
@@ -21,8 +21,7 @@
     <input class="input" type="text" id="quantidade">
 
     <input class="input" type="text" id="ingredientes">
-    <button class="button">Atualizar</button>
-
+    <button class="button">cadastrar</button>
+    
 </body>
 </html>
-
