--- a/pages/adicionar.html
+++ b/pages/adicionar.html
@@ -8,19 +8,19 @@
     <title>Api Produtos</title>
 </head>
 <body>
-    <input class="input" type="text" id="nome">
+    <input class="input" type="text" id="nome" placeholder="nome do produto">
    
-    <input class="input" type="text" id="categoria">
+    <input class="input" type="text" id="categoria" placeholder="categoria">
    
-    <input class="input" type="text" id="preco">
+    <input class="input" type="text" id="preco" placeholder="preço">
 
-    <input class="input" type="text" id="desconto">
+    <input class="input" type="text" id="desconto" placeholder="desconto">
 
-    <input class="input" type="text" id="descricao">
+    <input class="input" type="text" id="descricao" placeholder="descrição">
 
-    <input class="input" type="text" id="quantidade">
+    <input class="input" type="text" id="quantidade" placeholder="quantidade">
 
-    <input class="input" type="text" id="ingredientes">
+    <input class="input" type="text" id="ingredientes" placeholder="ingredientes">
     <button class="button">cadastrar</button>
     
 </body>
